--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Dermah/pulsar/issues"
   },
-  "homepage": "https://github.com/Dermah/pulsar"
+  "homepage": "https://github.com/Dermah/pulsar",
+  "dependencies": {
+    "express": "^4.12.3",
+    "socket.io": "^1.3.5"
+  }
 }
