--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-browserify": "^3.7.0"
+    "grunt-browserify": "^3.7.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
