--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.12.3",
     "jade": "^1.9.2",
+    "jsonfile": "^2.0.1",
     "p5": "^0.4.4",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5"
