--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.7.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "json-loader": "^0.5.2",
+    "node-libs-browser": "^0.5.2",
+    "webpack": "^1.9.10"
   }
 }
