--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A distributed visualiser",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack src/pulsar.js dist/pulsar.js --module-bind json",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
