--- a/package.json
+++ b/package.json
@@ -20,15 +20,12 @@
   },
   "homepage": "https://github.com/Dermah/pulsar",
   "dependencies": {
+    "@dermah/pulsar-input-keyboard": "^0.2.0",
     "@dermah/pulsar-transmitter": "^0.1.0",
-    "express": "^4.12.3",
-    "jade": "^1.9.2",
-    "jsonfile": "^2.0.1",
-    "p5": "^0.4.4",
-    "socket.io": "^1.3.5",
-    "socket.io-client": "^1.3.5",
     "json-loader": "^0.5.2",
     "node-libs-browser": "^0.5.2",
+    "p5": "^0.4.4",
+    "socket.io-client": "^1.3.5",
     "webpack": "^1.9.10"
   }
 }
