--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack src/pulsar.js dist/pulsar.js --module-bind json",
-    "watch": "npm run build -- --watch",
     "start": "node index.js"
   },
   "repository": {
@@ -21,11 +19,6 @@
   "homepage": "https://github.com/Dermah/pulsar",
   "dependencies": {
     "@dermah/pulsar-input-keyboard": "^0.2.0",
-    "@dermah/pulsar-transmitter": "^0.2.0",
-    "json-loader": "^0.5.2",
-    "node-libs-browser": "^0.5.2",
-    "p5": "^0.4.4",
-    "socket.io-client": "^1.3.5",
-    "webpack": "^1.9.10"
+    "@dermah/pulsar-transmitter": "^0.2.0"
   }
 }
